--- a/parking-front/package.json
+++ b/parking-front/package.json
@@ -44,6 +44,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(swiper|ssr-window|dom7)/)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
