--- a/parking-front/package.json
+++ b/parking-front/package.json
@@ -63,6 +63,8 @@
   },
   "devDependencies": {
     "sass": "^1.71.1",
-    "webpack": "^5.90.3"
+    "webpack": "^5.90.3",
+    "jest-axe": "^8.0.0",
+    "msw": "^2.0.0"
   }
 }
